# misanthropy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md
crates/misan/: Cargo.toml
crates/misan/src/: main.rs
crates/misanthropy/: Cargo.toml
crates/misanthropy/examples/: advanced_sampling.rs  simple.rs  texteditor.rs  thinking.rs  tools.rs
crates/misanthropy/src/: error.rs  lib.rs  tools.rs
