
[workspace.package]
version = "0.0.7"
edition = "2021"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "An complete, ergonomic SDK for Claude and the Anthropic API"
license = "MIT"
repository = "https://github.com/cortesi/misanthropy"
keywords = ["api", "anthropic", "claude", "sdk"]

[workspace]
resolver = "2"
members = ["crates/*"]


[workspace.dependencies]
misanthropy = { version = "0.0.7", path = "crates/misanthropy" }
