[package]
name = "misan"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A command-line tool for Claude and the Anthropic API"
readme = "../../README.md"

[dependencies]
misanthropy = { workspace = true }

clap = { version = "4.5.7", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.3"
log = "0.4.21"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
