[package]
name = "misanthropy"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
base64 = "0.22.1"
log = "0.4.21"
reqwest = { version = "0.12.5", features = ["json"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = "1.38.0"
