[package]
name = "misanthropy"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
base64 = "0.22.1"
futures-util = "0.3.30"
log = "0.4.21"
reqwest = { version = "0.12.5", features = ["json"] }
reqwest-eventsource = "0.6.0"
schemars = "0.8.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = "1.38.0"

[dev-dependencies]
tokio = { version="1.38.0", features=["full"] }
