[package]
name = "misanthropy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
repository.readme = true
description = "An interface to the Anthropic API"
readme = "../../README.md"

[dependencies]
base64 = "0.22.1"
futures-util = "0.3.30"
log = "0.4.21"
reqwest = { version = "0.12.5", features = ["json"] }
reqwest-eventsource = "0.6.0"
schemars = "0.8.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = "1.38.0"

[dev-dependencies]
tokio = { version="1.38.0", features=["full"] }
